# Ex4

./: .gitignore  CMakeLists.txt
src/: RegisterReader.cpp  RegisterReader.hpp  SensorMock.cpp  SensorMock.hpp  main.cpp
